config run smoke test on PROD